--- a/style.css
+++ b/style.css
@@ -67,6 +67,12 @@ body {
 }
 .header__section {
   text-align: center;
+  padding: 80px 0 162px 0;
+}
+.section__txt {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 .header__title {
   color: var(--text-color-white);
@@ -78,8 +84,6 @@ body {
   font-weight: 700;
   line-height: 36px; /* 150% */
   letter-spacing: 0.1px;
-
-  padding: 80px 0 10px 0;
 
   margin: 0;
 }
@@ -93,8 +97,6 @@ body {
   letter-spacing: 0.2px;
 
   /* text-align: center; */
-
-  padding-bottom: 10px;
   /* width: 799px; */
 
   margin: 0;
@@ -116,7 +118,8 @@ body {
   display: flex;
   justify-content: center;
   gap: 67px;
-  padding: 54px 0 162px 0;
+  margin-top: 54px;
+  /* padding: 54px 0 162px 0; */
 }
 .header__btn {
   cursor: pointer;
@@ -162,13 +165,12 @@ body {
   text-align: center;
   display: block;
 
-  padding-top: 56px;
-  margin: 0;
+  margin: 56px 0 0 0;
 }
 .main__account {
-  padding: 70px 7px 80px 84px;
+  padding: 70px 0px 80px 0px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   /* gap: 276px; */
 }
 .main__block {
@@ -231,8 +233,8 @@ body {
 }
 .main__explore {
   display: flex;
-  justify-content: space-between;
-  padding: 29px 33px 43px 84px;
+  justify-content: space-around;
+  padding: 29px 0 43px 0;
 }
 /* main */
 /* footer */
@@ -292,7 +294,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 16px;
-  padding-top: 49px;
+  margin-top: 49px;
 }
 .footer__btn {
   display: flex;
