--- a/style.css
+++ b/style.css
@@ -167,14 +167,23 @@ body {
 
   margin: 56px 0 0 0;
 }
+.main__section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+
+  gap: 108px;
+  padding: 70px 0 43px 0;
+}
 .main__account {
-  padding: 70px 0px 80px 0px;
+  /* padding: 70px 0px 80px 0px;
   display: flex;
   justify-content: space-around;
-  /* gap: 276px; */
+  gap: 276px; */
 }
 .main__block {
-  padding: 113px 0;
+  /* padding: 113px 0; */
 
   display: flex;
   flex-direction: column;
@@ -232,9 +241,9 @@ body {
   gap: 10px;
 }
 .main__explore {
-  display: flex;
+  /* display: flex;
   justify-content: space-around;
-  padding: 29px 0 43px 0;
+  padding: 29px 0 43px 0; */
 }
 /* main */
 /* footer */
